сверстал header в темной теме

--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Сложно сосредоточиться</title>
+    <meta name="color-scheme" content="dark light">
+    <title>Сложно сосредоточиться</title>    
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css"> 
+    <link rel="icon" type="image/ico" href="./images/favicon.ico" sizes="any">
+    <link rel="icon" type="image/svg+xml" href="./images/favicon.svg">
+    <link rel="apple-touch-icon" href="mobile-icon.png"> 
   </head>
   <body class="page">
     <header class="header decorated-zone">
@@ -34,6 +44,9 @@
           </li>
         </ul>
       </nav>
+      <h1 class="header__title">no focus</h1>
+      <p class="header__description title-decor">Что делать, когда не можешь делать ничего <br> Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+      <div class="header__rec" aria-hidden="true"></div>
     </header>
     <script src="./scripts/script.js"></script>
   </body>
