--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </li>
         </ul>
       </nav>
-      <h1 class="header__title">no focus</h1>
+      <h1 class="logo">no focus</h1>
       <p class="header__description title-decor">
         Что делать, когда не можешь делать ничего <br />
         Или почему нам так сложно сконцентрироваться, особенно когда очень надо
@@ -52,7 +52,7 @@
       <div class="header__rec" aria-hidden="true"></div>
     </header>
     <main class="main">
-      <section class="section-decor section-1-why">
+      <section class="section-decor section-why">
         <h2 class="section-title-decor">Почему сосредоточиться так сложно</h2>
         <article class="article-decor">
           <h3 class="title-decor">Многозадачность</h3>
@@ -61,7 +61,7 @@
             важные. Где же легендарная многозадачность, когда она так нужна вам
             (и всем нанимающим менеджерам этого мира)? А дело в том, что её
             просто не существует. Исследователи
-            <a class="link-decor" href="#">выяснили</a>, что мозгу тяжело
+            <a class="link-decor" href="#" target="_blank">выяснили</a>, что мозгу тяжело
             концентрироваться даже на двух делах одновременно. А когда в поле
             внимания попадает несколько важных задач, организм паникует и
             выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
@@ -82,7 +82,7 @@
           </p>
         </article>
       </section>
-      <section class="section-decor section-2-what">
+      <section class="section-decor section-what">
         <h2 class="section-title-decor">Что снижает концентрацию внимания?</h2>
         <article class="article-decor">
           <h3 class="title-decor">Многозадачность</h3>
@@ -119,7 +119,7 @@
           </p>
         </article>
       </section>
-      <section class="section-decor section-3-how">
+      <section class="section-decor section-how">
         <h2 class="section-title-decor">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
@@ -153,7 +153,7 @@
           <h4 class="title-decor title-font-decor">Прогуляйтесь</h4>
           <p class="paragraph-decor">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-            <a class="link-decor">показал</a>, что созерцание природы повышает
+            <a class="link-decor" href="#" target="_blank">показал</a>, что созерцание природы повышает
             концентрацию, в то время как после просмотра городских пейзажей она
             наоборот понижается. Можно совместить прогулку с физическими
             упражнениями или бегом — так в мозг поступит ещё больше кислорода и
@@ -180,7 +180,7 @@
           </p>
         </article>
       </section>
-      <section class="section-decor section-4-gallery">
+      <section class="section-decor section-gallery">
         <h3 class="title-decor">А можно в картинках?</h3>
         <img
           class="picture-decor"
@@ -215,7 +215,7 @@
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <h2 class="header__title footer__title">focus</h2>
+      <h2 class="logo footer__title">focus</h2>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
