--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
             важные. Где же легендарная многозадачность, когда она так нужна вам
             (и всем нанимающим менеджерам этого мира)? А дело в том, что её
             просто не существует. Исследователи
-            <a class="link-decor" href="#" target="_blank">выяснили</a>, что мозгу тяжело
-            концентрироваться даже на двух делах одновременно. А когда в поле
-            внимания попадает несколько важных задач, организм паникует и
-            выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
-            работаем невнимательно: ошибаемся и быстро устаём.
+            <a class="link-decor" href="#" target="_blank">выяснили</a>, что
+            мозгу тяжело концентрироваться даже на двух делах одновременно. А
+            когда в поле внимания попадает несколько важных задач, организм
+            паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за
+            этого мы работаем невнимательно: ошибаемся и быстро устаём.
           </p>
         </article>
         <article class="article-decor">
@@ -153,12 +153,12 @@
           <h4 class="title-decor title-font-decor">Прогуляйтесь</h4>
           <p class="paragraph-decor">
             Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-            <a class="link-decor" href="#" target="_blank">показал</a>, что созерцание природы повышает
-            концентрацию, в то время как после просмотра городских пейзажей она
-            наоборот понижается. Можно совместить прогулку с физическими
-            упражнениями или бегом — так в мозг поступит ещё больше кислорода и
-            он будет лучше работать. Но и простая двадцатиминутная прогулка —
-            тоже отличный вариант.
+            <a class="link-decor" href="#" target="_blank">показал</a>, что
+            созерцание природы повышает концентрацию, в то время как после
+            просмотра городских пейзажей она наоборот понижается. Можно
+            совместить прогулку с физическими упражнениями или бегом — так в
+            мозг поступит ещё больше кислорода и он будет лучше работать. Но и
+            простая двадцатиминутная прогулка — тоже отличный вариант.
           </p>
         </article>
         <article class="article-decor">
